--- a/page/templates/page/page-banner.html
+++ b/page/templates/page/page-banner.html
@@ -1,8 +1,8 @@
 <!--example include to override-->
-{% if page.url == 'this' %}
+{% if page.slug == 'this' %}
     <!--banner this-->
 {% endif %}
 
-{% if page.url == 'that' %}
+{% if page.slug == 'that' %}
     <!--banner that-->
 {% endif %}
