--- a/page/templates/page/page.html
+++ b/page/templates/page/page.html
@@ -5,10 +5,9 @@
 <link rel="alternate" href="{% url 'feed' %}" type="application/rss+xml" title="RSS">
 {% endblock %}
 
-{% block body %} id="page-{{ page.url }}"{% endblock %}
-{% block body_class %}page{% endblock %}
+{% block body_class %}page page__{{ page.slug }}{% endblock %}
 
-{% block bc %}
+{% block breadcrumb %}
 {% if page.parent %}
     <div class="breadcrumb" itemprop="breadcrumb">
 		<a href="/">Home</a> ›
@@ -23,14 +22,8 @@
     {% if not page.active and not user.is_staff %}
         <p>Sorry, this page is disabled for now.</p>
     {% else %}
-        <h1 class="h{% if user.is_staff %} h1nav{% endif %}">
-            {{ page.title|widont }}
-            {% if user.is_staff %}
-                <small><a href="{% url 'edit-page' page.pk %}">edit</a></small>
-            {% endif %}
-        </h1>
+        <h1>{{ page.title|widont }}</h1>
         {% include 'page/page-banner.html' %}
-
         {{ page.body|safe }}
         {% include 'page/nav.html' %}
         {% include 'page/include_below.html' %}
