--- a/page/templates/page/page.html
+++ b/page/templates/page/page.html
@@ -26,6 +26,6 @@
         {% include 'page/page-banner.html' %}
         {{ page.body|safe }}
         {% include 'page/nav.html' %}
-        {% include 'page/include_below.html' %}
+        {% include 'page/page-footer.html' %}
     {% endif %}
 {% endblock %}
