--- a/page/templates/page/page-footer.html
+++ b/page/templates/page/page-footer.html
@@ -1,1 +1,3 @@
-<!--empty include to override-->
+{% if user.is_authenticated and user.is_staff %}
+    <p><a class="btn" href="{% url 'admin:page_page_change' page.pk %}">edit</a>
+{% endif %}
