--- a/page/templates/page/page.html
+++ b/page/templates/page/page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'page/base.html' %}
 {% load page_tags %}
 {% block title %}{{ page.title }}{% if page.author %} by {{ page.author }}{% endif %} - {{ site_name }}{% endblock %}
 {% block head %}
