--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -1,10 +1,11 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html ⚡>
 <head>
 <meta charset="utf-8">
 <title>{% block title %}{{ title }}{% endblock %}</title>
 <meta name="description" content="{% block desc %}{{ desc }}{% endblock %}">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+{% include 'amp-boilerplate.html' %}
 {% block head %}{% endblock %}
 </head>
 <body class="{% block body_class %}{% endblock %}">
