--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -5,7 +5,7 @@
 <title>{% block title %}{{ title }}{% endblock %}</title>
 <meta name="description" content="{% block desc %}{{ desc }}{% endblock %}">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-{% include 'pages/amp-boilerplate.html' %}
+{% include 'page/amp-boilerplate.html' %}
 {% block head %}{% endblock %}
 </head>
 <body class="{% block body_class %}{% endblock %}">
