--- a/page/templates/page/page.html
+++ b/page/templates/page/page.html
@@ -1,4 +1,4 @@
-{% extends 'pages/base.html' %}
+{% extends 'page/base.html' %}
 {% block title %}{{ page.title }}{% if page.author %} by {{ page.author }}{% endif %} - {{ site_name }}{% endblock %}
 {% block head %}
 <link rel="canonical" href="{{ page.get_absolute_url }}">
@@ -21,8 +21,8 @@
     {% if page.author %}
         <div class="author">By <b>{{ page.author }}</b></div>
     {% endif %}
-    {% include 'pages/page-banner.html' %}
+    {% include 'page/page-banner.html' %}
     {{ page.body }}
-    {% include 'pages/nav.html' %}
+    {% include 'page/nav.html' %}
     <!--p><a href="{{ repo }}{{ page.path }}">edit</a-->
 {% endblock %}
