--- a/page/templates/page/page.html
+++ b/page/templates/page/page.html
@@ -24,5 +24,5 @@
     {% include 'page/page-banner.html' %}
     {{ page.body }}
     {% include 'page/nav.html' %}
-    <!--p><a href="{{ repo }}{{ page.get_absolute_url }}.md">edit</a-->
+    <!--p><a href="{{ repo_url }}{{ page.rel_source_path }}">edit</a-->
 {% endblock %}
