Fixes and adjustments to shop template

--- a/page/templates/shop/order.htm
+++ b/page/templates/shop/order.htm
@@ -83,6 +83,7 @@
         <p><button type="submit" class="t">Confirm order</button></p>
     </form>
     <script src="{{ site_root }}/config.js"></script>
+    <script src="{{ site_root }}/lang.js"></script>
     <script src="{{ site_root }}/shop.js"></script>
     <script src="{{ site_root }}/order.js"></script>
 </body>
