--- a/page/templates/shop/cart.html
+++ b/page/templates/shop/cart.html
@@ -1,3 +1,5 @@
+<div id="shop">
 <div id="cart"></div>
 <div id="total"></div>
 <p><a href="{{ site_root }}/order.htm" class="t">Purchase</a></p>
+</div>
