--- a/page/templates/shop/cart.js.html
+++ b/page/templates/shop/cart.js.html
@@ -1,3 +1,4 @@
 <script src="{{ site_root }}/config.js"></script>
+<script src="{{ site_root }}/lang.js"></script>
 <script src="{{ site_root }}/shop.js"></script>
 <script>window.addEventListener("load", PriceData.load);</script>
