Simple default template, moved eshop to own repo

--- a/page/templates/page/page.html
+++ b/page/templates/page/page.html
@@ -1,11 +1,19 @@
-{% extends 'page/base.html' %}
-{% block title %}{{ page.title }}{% if page.author %} by {{ page.author }}{% endif %} - {{ site_name }}{% endblock %}
+<!DOCTYPE html>
+<html ⚡>
+<head>
+<meta charset="utf-8">
+<title>{% block title %}{{ page.title }}{% if page.author %} by {{ page.author }}{% endif %} - {{ site_name }}{% endblock %}</title>
+<meta name="description" content="{% block desc %}{{ desc }}{% endblock %}">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 {% block head %}
 <link rel="canonical" href="{{ page.get_absolute_url }}">
 <link rel="alternate" href="/feed.xml" type="application/rss+xml" title="RSS">
 {% endblock %}
-
-{% block body_class %}page page__{{ page.slug }}{% endblock %}
+</head>
+<body class="{% block body_class %}page page__{{ page.slug }}{% endblock %}">
+<header><a href="/">{{ site_name }}</a></header>
+<main class="content">
 
 {% block breadcrumb %}
 {% if page.parent %}
@@ -27,6 +35,13 @@
     {% endif %}
 
     {{ page.body }}
-    {% include 'page/nav.html' %}
+    {% include 'nav.html' %}
     {% if dev %}<p><a href="{{ repo_url }}{{ page.rel_source_path }}">edit</a>{% endif %}
 {% endblock %}
+
+</main>
+<footer>
+<p>&copy; {{ site_name }}
+</footer>
+</body>
+</html>
